@@ -18,6 +18,7 @@ Version history:
 - typed flext::NewAligned allocator
 - fixed severe Altivec bug (load unaligned)... thanks to Ian Ollmann
 - restructured initialization and finalization (esp. Max DSP stuff)
+- real class names now also reflect debug mode (like in flext_base_shared_d)
 
 0.5.0:
 - fixes for 64 bit builds (size_t is integer type of pointer size)
